updates for html title, logo, and spacing bug

--- a/tei/tagLibrary.css
+++ b/tei/tagLibrary.css
@@ -195,6 +195,6 @@ div.p {
 	padding-top: 6px;
 	padding-bottom: 6px;
 }
-.image {
+.logo {
     margin-bottom: 36px;
 }
